# sphinx-json-schema-spec

./: .gitignore  .pre-commit-config.yaml  README.rst  noxfile.py  pyproject.toml  tox.ini
.github/: SECURITY.md
.github/workflows/: ci.yml
docs/: conf.py  index.rst  requirements.in  requirements.txt
sphinx_json_schema_spec/: __init__.py
sphinx_json_schema_spec/tests/: test_sphinx.py
