[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"

[project]
name = "sphinx_json_schema_spec"
description = "Sphinx support for the JSON Schema specifications"
readme = "README.rst"
license = {text = "MIT"}
requires-python = ">=3.8"
keywords = ["json schema", "jsonschema", "data validation", "sphinx", "json"]
authors = [
  {email = "Julian+sphinx-json-schema-spec@GrayVines.com"},
  {name = "Julian Berman"},
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
  "Framework :: Sphinx :: Extension",
  "Topic :: Documentation :: Sphinx",
  "Topic :: File Formats :: JSON :: JSON Schema",
]
dynamic = ["version"]

dependencies = [
  "lxml",
  "sphinx>=5.1.1",
]

[project.urls]
Documentation = "https://sphinx-json-schema-spec.readthedocs.io/"
Homepage = "https://github.com/python-jsonschema/sphinx-json-schema-spec"
Issues = "https://github.com/python-jsonschema/sphinx-json-schema-spec/issues/"
Funding = "https://github.com/sponsors/Julian"
Source = "https://github.com/python-jsonschema/sphinx-json-schema-spec"

[tool.doc8]
ignore = [
    "D001",  # one sentence per line, so max length doesn't make sense
]

[tool.isort]
combine_as_imports = true
from_first = true
include_trailing_comma = true
multi_line_output = 3

[tool.ruff]
line-length = 79
target-version = "py38"
select = ["B", "D", "E", "F", "Q", "UP", "W"]
ignore = [
  # raise SomeException(...) is fine.
  "B904",
  # It's fine to not have docstrings for magic methods.
  "D105",
  # This rule makes diffs uglier when expanding docstrings (and it's uglier)
  "D200",
  # No blank lines before docstrings.
  "D203",
  # Start docstrings on the second line.
  "D212",
  # This rule misses sassy docstrings ending with ! or ?.
  "D400",
  # Section headers should end with a colon not a newline
  "D406",
  # Underlines aren't needed
  "D407",
  # Plz spaces after section headers
  "D412",
  # We support 3.8 + 3.9
  "UP007",
]
extend-exclude = ["suite"]

[tool.ruff.flake8-quotes]
docstring-quotes = "double"

[tool.ruff.per-file-ignores]
"docs/*" = ["ANN", "D"]
"sphinx_json_schema_spec/tests/*" = ["ANN", "D"]
"noxfile.py" = ["ANN", "D"]
